# edgebench

./: .gitignore  README.md  pyproject.toml
configs/: demo.json
edgebench/: __init__.py  cli.py  clock.py  compare.py  events.py  metrics.py  models.py  planner.py  rng.py  runner.py  scheduler.py  transport.py  validation.py  writer.py
tests/: test_edgebench.py
