[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgebench"
version = "0.1.0"
description = "Reproducible HTTP edge benchmarking with TLS fingerprint control"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "anyio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
edgebench = "edgebench.cli:main"

[tool.setuptools.packages.find]
include = ["edgebench*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
